--- a/gulp/css/partials/core/_extend.scss
+++ b/gulp/css/partials/core/_extend.scss
@@ -8,7 +8,7 @@
 }
 
 %transitionPanels {
-	transition: transform 0.5s ease;
+	transition: all 0.5s ease;
 }
 
 %transitionEase {
